[project]
name = "mcp1"
version = "0.1.0"
description = "This is a First demo of MCP client & Server, Using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.2.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

